tested-trait/tests/ui/tests-same-name.stderr
error: the test `test` is defined multiple times
 --> tests/ui/tests-same-name.rs:9:12
  |
9 |         fn test() {}
  |            ^^^^
